--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/shoper_development?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://127.0.0.1:3306/restful_service?useUnicode=true&amp;characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=root
 //\u6700\u5C0F\u8FDE\u63A5\u6570
